--- a/_includes/themes/lab/default.html
+++ b/_includes/themes/lab/default.html
@@ -22,7 +22,7 @@
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all"/>
 
     <!-- icon -->
-    <link rel="shortcut icon" href="{{ ASSET_PATH }}/images/logo/favicon.ico"/>
+    <link rel="shortcut icon" href="{{ ASSET_PATH }}/images/logo/favicon.png"/>
 
     <!-- Custom fonts and icons via Font Awesome, http://fortawesome.github.io/Font-Awesome/ -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
@@ -70,9 +70,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/">
-        <img class="pull-left logo" src="{{ ASSET_PATH }}/images/logo/lab-logo.svg" type="image/svg+xml">
+        {% if page.categories.first != 'home' %}      
+        <!-- a href="/"> {{ page.categories }} -->
+        <img class="pull-left logo" src="{{ ASSET_PATH }}/images/logo/hrc2-logo-bw-sq-t.png">
         </a>
+        {% endif %}
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -93,7 +95,7 @@
           {% assign pages_list = (site.pages | sort: 'navorder') %}
           {% assign group = 'navigation' %}
           {% include JB/pages_list %}
-          <li class="dropdown nav navbar-nav">
+          <!--li class="dropdown nav navbar-nav">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
               More <span class="caret"></span>
             </a>
@@ -103,7 +105,7 @@
               {% assign group = 'subnavigation' %}
               {% include JB/pages_list %}
             </ul>
-            </li>
+            </li -->
         </ul>
       </div><!-- /.navbar-collapse -->
     </nav>
