--- a/_includes/themes/lab/default.html
+++ b/_includes/themes/lab/default.html
@@ -71,7 +71,7 @@
           <span class="icon-bar"></span>
         </button>
         {% if page.categories.first != 'home' %}      
-        <!-- a href="/"> {{ page.categories }} -->
+        <a href="/"> 
         <img class="pull-left logo" src="{{ ASSET_PATH }}/images/logo/hrc2-logo-bw-sq-t.png">
         </a>
         {% endif %}
@@ -134,9 +134,9 @@
           <li><a href={{ site.institution.url }}>{{ site.institution.name }}</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right navbar-small">
-          <li><a href='/about.html#purpose'>About</a></li>
-          <li><a href='/about.html#join'>Join</a></li>
-          <li><a href='/about.html#contact'>Contact</a></li>
+          <li><a href='/about.html'>About</a></li>
+          <!-- li><a href='/about.html#join'>Join</a></li>
+          <li><a href='/about.html#contact'>Contact</a></li -->
         </ul>
       </div><!-- /.navbar-collapse -->
     </div>
