new pub computational hri

--- a/assets/themes/lab/css/style.scss
+++ b/assets/themes/lab/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 $font-size-base: 16px;
-$font-stack:    Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-stack:    Lato, "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $primary-color: #000000;
 $subtle-color: #95a5a6;
 $font-weight-base: 300;
@@ -158,7 +158,7 @@ strong {
 
 .logobox {
 	height: 220px;
-	width: 580px;
+	width: 600px;
 	padding-left:50px;
 	line-height: 65px;
 	font-weight: $heavy-font-weight;
