--- a/_includes/themes/lab/default.html
+++ b/_includes/themes/lab/default.html
@@ -97,7 +97,7 @@
           {% assign pages_list = (site.pages | sort: 'navorder') %}
           {% assign group = 'navigation' %}
           {% include JB/pages_list %}
-          <!--li class="dropdown nav navbar-nav">
+          <li class="dropdown nav navbar-nav">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
               More <span class="caret"></span>
             </a>
@@ -107,7 +107,7 @@
               {% assign group = 'subnavigation' %}
               {% include JB/pages_list %}
             </ul>
-            </li -->
+            </li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </nav>
