--- a/assets/themes/lab/less/style.less
+++ b/assets/themes/lab/less/style.less
@@ -125,6 +125,13 @@ h6 {
 	/* Museo */	
 }
 
+.mediumhead {
+	font-size: 22px;
+	font-weight: 300;
+	line-height:32px;
+	/* Museo */	
+}
+
 .smallhead {
 	font-size: 19px;
 	font-weight: 300;
