More press and news

--- a/_includes/themes/lab/paper.html
+++ b/_includes/themes/lab/paper.html
@@ -54,7 +54,7 @@ with gratitude.
 				<div class="smallspacer"></div>
 				{% if page.pdflink %}
 					<i class="fa fa-file-pdf-o fa-fw"></i>
-					<a class="off" href="{{ page.pdflink }}">Journal PDF</a>
+					<a class="off" href="{{ page.pdflink }}">Publication PDF</a>
 					<br/>
 				{% endif %}
 				{% if page.pdf %}
@@ -64,7 +64,7 @@ with gratitude.
 				{% endif %}
 				{% if page.fulltext %}
 				<i class="fa fa-external-link fa-fw"></i>
-				<a class="off" href="{{ page.fulltext }}">Journal HTML</a>
+				<a class="off" href="{{ page.fulltext }}">Publication Link</a>
 				{% endif %}
 			</div>
 			<div class="bigspacer"></div>			
