--- a/assets/themes/lab/css/style.scss
+++ b/assets/themes/lab/css/style.scss
@@ -327,7 +327,23 @@ strong {
 	color: $subtle-color;
 }
 
+%note {
+	font-size: $font-size-base;
+	font-weight: $font-weight-base;
+	line-height: ceil($font-size-base*1.2);
+
+	a {
+		color: black;
+		border-bottom: thin dotted;
+	}
+}
+
+.note{
+	@extend %note;
+}
+
 .note-title {
+	@extend %note;
 	font-weight: 600;
 	a {
 		color: black;
@@ -338,25 +354,8 @@ strong {
 
 	}	
 }
-.note {
-	font-size: $font-size-base;
-	font-weight: $font-weight-base;
-	line-height: ceil($font-size-base*1.2);
-
-	a {
-		color: black;
-		border-bottom: thin dotted;
-		/*&:hover {
-			border-bottom: thin solid;	
-		}*/
-	}
-
-	h1 {
-
-	}
-}
-
 .smallnote {
+	@extend %note;
 	font-size: floor($font-size-base*0.9);
 	font-weight: $font-weight-base;
 	line-height: $font-size-base;
@@ -373,6 +372,32 @@ strong {
 .shortref {
 	font-style: italic;
 }
+
+.selected-press {
+
+	font-size: floor($font-size-base*1.3);
+	font-weight: $font-weight-base;
+	a {
+		color: black;
+		border-bottom: thin solid;
+		background: LemonChiffon ;
+
+	}
+}
+
+.other-press {
+	color: gray;
+	font-size: $font-size-base;
+	font-weight: $font-weight-base;
+	line-height: ceil($font-size-base*1.2);
+
+	a {
+		color: black;
+		border-bottom: thin dotted;
+	}
+}
+
+
 
 /* tag_box */
 .tag_box {
