Some bug fixes and news additions.

--- a/_includes/themes/lab/post.html
+++ b/_includes/themes/lab/post.html
@@ -8,7 +8,6 @@
   {% endif %}
 {% endfor %}
 
-
 <div class="row post-full">
   <div class="col-md-2">
     <div class="bigspacer"></div>
@@ -39,6 +38,9 @@
     </div>
   </div>
 
+<!-- 
+   This doesn't work - maybe worth fixing? 
+   
   {% unless page.categories == empty %}
     <ul class="tag_box inline">
       <li><i class="glyphicon glyphicon-open"></i></li>
@@ -53,6 +55,8 @@
       {% include JB/tags_list %}
     </ul>
   {% endunless %}
+
+-->
 
   {% comment %}
     <hr>
