--- a/_includes/themes/lab/news.html
+++ b/_includes/themes/lab/news.html
@@ -11,6 +11,7 @@
       {{ content }}
     </div>
 
+    <!-- This doesn't work, maybe worth fixing 
   {% unless page.categories == empty %}
     <ul class="tag_box inline">
       <li><i class="glyphicon glyphicon-open"></i></li>
@@ -26,6 +27,8 @@
       {% include JB/tags_list %}
     </ul>
   {% endunless %}  
+  
+  -->
   
     <hr>
     <ul class="pagination">
