fixed non-square profile photos

--- a/assets/themes/lab/css/style.scss
+++ b/assets/themes/lab/css/style.scss
@@ -105,9 +105,8 @@ a.off {
 }
 
 .big-member-photo {
-	// width: 300px;
+	width: 100%;
 	max-width: 300px;
-	// height: 400px;
 }
 
 .member-photo {
