--- a/assets/themes/lab/css/style.scss
+++ b/assets/themes/lab/css/style.scss
@@ -172,6 +172,10 @@ strong {
 	text-shadow: 1.5px 1.5px #ffffff;
 }
 
+.fa-trophy {
+	color: rgb(22, 111, 163) ;
+}
+
 // navbar
 
 .navbar-brand { 
