--- a/_includes/themes/lab/default.html
+++ b/_includes/themes/lab/default.html
@@ -81,7 +81,7 @@
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="jb-navbar-collapse">
-        <ul class="nav navbar-nav navbar-left hidden-sm">
+        <ul class="nav navbar-nav navbar-left hidden-sm hidden-md">
           <!-- Don't put site title on home page -- there's already a big title there. -->
           {% assign make_title = true %}
           {% for pc in page.categories %}
