--- a/_includes/themes/lab/default.html
+++ b/_includes/themes/lab/default.html
@@ -11,6 +11,7 @@
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
+    <meta property="og:image" content="{{ ASSET_PATH }}/themes/lab/images/logo/hrc2-logo-bw-sq.png" />
     <!-- Bootstrap styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <!-- Optional theme -->
