fixed bug in member page for when there's no dept

--- a/_includes/themes/lab/member.html
+++ b/_includes/themes/lab/member.html
@@ -19,8 +19,9 @@
 			<br/>
 			<div class="smallhead">
 				{{ member.position }}
-			in
-				{{ member.field }}
+			{% if member.field %}
+			in {{ member.field }}
+			{% endif %}	
 			</div>
 		</div>
 	</div>				
